# cls-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENT_INTEGRATION.md  API_MATRIX.md  BUNDLE_SCHEMA.md  COMMANDS.md  INSTALL.md  QUICKSTART.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: create-alarm.json  create-index.json  create-topic.json  search-log.json  simple_webhook_receiver.py  upload-log.jsonl
examples/agent-workflows/debug-existing-alarm/: README.md
examples/alarm-advanced/: README.md  notice-rules-advanced.json  notice-rules-basic.json  notice-rules-channel-variants.json  notice-rules-escalation.json  notice-rules-generated.json  policy-analysis-classifications.json  policy-analysis.json  policy-callback.json  policy-fixed-schedule.json  policy-group-trigger.json  policy-multi-conditions.json  policy-notice-rules.json
src/cls_cli/: __main__.py  cli.py
tests/: conftest.py  test_ai_alias_normalizer.py  test_ai_commands.py  test_alarm_bundle.py  test_alarm_bundle_dry_run.py  test_alarm_bundle_plan_apply.py  test_alarm_cleanup.py  test_alarm_commands.py  test_alarm_discovery.py  test_alarm_e2e_harness.py  test_alarm_integration_pagination.py  test_alarm_notice_advanced.py  test_alarm_policy.py  test_alarm_policy_advanced.py  test_alarm_resource_discovery.py  test_alarm_webhook_matrix.py  test_alarm_write_boundaries.py  test_cli_help.py  test_config_credentials.py  test_index_log_commands.py  test_logset_topic_commands.py  test_machine_config_commands.py  test_output_errors.py  test_safety.py  test_upload_client.py
(+59 files in other folders)
