[project]
name = "cls-cli"
version = "0.1.0"
description = "Agent-friendly command line tool for Tencent Cloud CLS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CLS CLI Contributors" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
    "tencentcloud-sdk-python>=3.0.1300",
    "tencentcloud-cls-sdk-python>=1.0.8",
]

[project.scripts]
cls = "cls_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["cls_cli"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tencentcloud.*"
ignore_missing_imports = true
